fix: aur dependencies

--- a/pkgbuilds/paxthemax-custom-fonts/Makefile
+++ b/pkgbuilds/paxthemax-custom-fonts/Makefile
@@ -12,6 +12,10 @@ install: ## Install the meta-package
 clean: ## Cleanup
 	rm -rf pkg src *.pkg.tar* *.log
 
+.PHONY: publish
+publish: ## Publish to local repo, prepare to sync
+	mv *.pkg.tar* ../../x86_64
+
 .PHONY: help
 help: ## This help
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
