update: font deps

--- a/pkgbuilds/paxthemax/PKGBUILD
+++ b/pkgbuilds/paxthemax/PKGBUILD
@@ -15,6 +15,7 @@ package() {
         'linux-firmware'
         'linux-headers'
         'kernel-modules-hook'
+        'mkinitcpio-encrypt-detached-header'
         'logrotate'
         'man-pages'
         'btrfs-progs'
