tag: empty paxthemax package

--- a/pkgbuilds/paxthemax/PKGBUILD
+++ b/pkgbuilds/paxthemax/PKGBUILD
@@ -1,261 +1,12 @@
 pkgname='paxthemax'
-pkgver=1.0.2
+pkgver=999.0.0
 pkgrel=1
-pkgdesc='System packages installed on paxthemax machines'
+pkgdesc='System packages installed on paxthemax machines (deprecated)'
 arch=('any')
 url='https://github.com/paxthemax/arch-repo'
 license=('MIT')
 
 package() {
-    depends=(
-        # base
-        'base'
-        'dash'
-        'linux'
-        'linux-firmware'
-        'linux-headers'
-        'kernel-modules-hook'
-        'mkinitcpio-encrypt-detached-header'
-        'logrotate'
-        'man-pages'
-        'btrfs-progs'
-        'htop'
-        'vi'
-
-        # base-devel
-        'posix'
-        'autoconf'
-        'automake'
-        'bison'
-        'fakeroot'
-        'flex'
-        'gcc'
-        'gettext'
-        'groff'
-        'gzip'
-        'libtool'
-        'make'
-        'pacman'
-        'pkgconf'
-        'sudo'
-        'texinfo'
-        'which'
-
-        # boot
-        'arch-secure-boot'
-        'intel-ucode'
-        'terminus-font'
-
-        # virtual machines
-        'libvirt'
-        'virt-manager'
-        'qemu'
-        'dnsmasq'
-        'edk2-ovmf'
-
-        # hardware
-        'fwupd'
-        'tlp'
-        'throttled'
-        'dmidecode'
-        'upower'
-        'acpi'
-        'bolt'
-        'intel-media-driver'
-        'vulkan-intel'
-        'vulkan-headers'
-
-        # arch
-        'devtools'
-        'reflector'
-        'pacman-contrib'
-        'pkgstats'
-
-        # files
-        'progress'
-        'gocryptfs'
-        'ntfs-3g'
-        'sshfs'
-        'udiskie'
-        'xplr'
-        'ncdu'
-        'croc'
-        'bat'
-        'exa'
-        'fd'
-        'ripgrep'
-        'ripgrep-all'
-        'tree'
-        'trash-cli'
-        'imagemagick'
-        'jq'
-        'dfrs'
-        'zathura-pdf-mupdf'
-        'pdftk'
-        'inotify-tools'
-        'xournalpp'
-        # 'bfs'
-        'lftp'
-
-        # archiving
-        'lbzip2'
-        'pigz'
-        'pixz'
-        'p7zip'
-        'unrar'
-        'unzip'
-        'zip'
-
-        # network
-        'iwd'
-        'nftables'
-        'iptables-nft'
-        'bandwhich'
-        'net-tools'
-        'nmap'
-        'openbsd-netcat'
-        'dog'
-        'mtr'
-        'sipcalc'
-        'wget'
-        'rsync'
-        'openssh'
-        'curlie'
-        'speedtest-cli'
-        'wireguard-tools'
-        'systemd-resolvconf'
-        'vnstat'
-        'proxychains-ng'
-
-        # security
-        'arch-audit'
-        # 'overdue'
-        'ccid'
-        'pam-u2f'
-        'usbguard'
-        'pinentry'
-        'gcr'
-        'checksec'
-        'polkit-gnome'
-        'mokutil'
-
-        # oom prevention
-        'earlyoom'
-        'systembus-notify'
-
-        # audio
-        'pipewire-pulse'
-        'pulseaudio-alsa'
-        'pulseaudio-bluetooth'
-        'pamixer'
-        'pavucontrol'
-        'playerctl'
-        'bluez'
-        'bluez-utils'
-
-        # ui
-        'hyprland'
-        'swaybg'
-        'swaylock'
-        'xorg-server-xwayland'
-        'wl-clipboard'
-        'python-i3ipc'
-        # 'gtk-theme-arc-gruvbox-git'
-        'waybar'
-        'light'
-        'slurp'
-        'qt5-wayland'
-        'qt6-wayland'
-        'wtype'
-        # 'wlrctl'
-        'wldash'
-
-        # fonts
-        'paxthemax-custom-fonts'
-
-        # git
-        'git'
-        'git-delta'
-        'meld'
-        'tig'
-
-        # dev tools
-        'prettier'
-        'dos2unix'
-        'editorconfig-core-c'
-        'docker'
-        'docker-compose'
-        'direnv'
-        'strace'
-        'fzf'
-        'visidata'
-
-        # shell dev
-        'shellcheck'
-        'bash-language-server'
-        'checkbashisms'
-        'shfmt'
-        'bash-completion'
-
-        # go dev
-        'go'
-        'go-tools'
-        'gopls'
-        'revive'
-        'staticcheck'
-
-        # js dev
-        'yarn'
-        'typescript-language-server'
-
-        # rust dev
-        'rust'
-        'rust-analyzer'
-
-        # db
-        'postgresql-libs'
-        'pgformatter'
-        'pgcli'
-        'dbmate'
-        'mariadb-clients'
-
-        # android
-        'android-tools'
-        'android-udev'
-
-        # terminal
-        'kitty'
-        'zsh'
-        'lscolors-git'
-
-        # passwords
-        'pwgen'
-        'gnome-keyring'
-        'libgnome-keyring'
-
-        # browsers
-        'firefox'
-
-        # screenshots & gifs & desktop sharing
-        'grim'
-        'swappy'
-        'wf-recorder'
-        'v4l2loopback-dkms'
-
-        # media
-        'wireplumber'
-
-        # video
-        'mpv'
-        'mpv-mpris'
-        'ffmpeg'
-        'yt-dlp'
-        'aria2'
-
-        # misc
-        'calibre'
-        'urlwatch'
-        'mkcert'
-    )
-
+    # Try empty package as we are retiring it
+    depends=()
 }
